{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 284,
  "lineage": "79e0b91d-9632-d45e-f7f9-64ca0de48fbc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "flask_url",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03f20765724823b3f",
            "association_id": "eipassoc-00c6059267f1fe6ca",
            "domain": "vpc",
            "id": "eipalloc-03f20765724823b3f",
            "instance": "i-0d136a81438e20eb8",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0ce23dd0b6d7008c9",
            "private_dns": "ip-10-0-0-174.eu-north-1.compute.internal",
            "private_ip": "10.0.0.174",
            "public_dns": "ec2-13-50-178-150.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.178.150",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Flask_url"
            },
            "tags_all": {
              "Name": "Flask_url"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.flask_app",
            "aws_security_group.open_to_world",
            "aws_subnet.public_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05483d007d5950265",
            "domain": "vpc",
            "id": "eipalloc-05483d007d5950265",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-16-16-242-64.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.242.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "flask_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01a7573bb17a45f12",
            "arn": "arn:aws:ec2:eu-north-1:630574434147:instance/i-0d136a81438e20eb8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07dda28c5ee7da384",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d136a81438e20eb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "abra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ce23dd0b6d7008c9",
            "private_dns": "ip-10-0-0-174.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.174",
            "public_dns": "ec2-13-53-164-183.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.53.164.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07dda28c5ee7da384",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0404d2907336e4129",
            "tags": {
              "Name": "terra-flask_app"
            },
            "tags_all": {
              "Name": "terra-flask_app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043773d017d98498d"
            ]
          },
          "dependencies": [
            "aws_security_group.open_to_world",
            "aws_subnet.public_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "redis_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01a7573bb17a45f12",
            "arn": "arn:aws:ec2:eu-north-1:630574434147:instance/i-0637210d008085a0d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c91c7a05aed79ab3",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0637210d008085a0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "abra",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f9a4360aa667673b",
            "private_dns": "ip-10-0-1-189.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.189",
            "public_dns": "ec2-16-170-148-205.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.148.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c91c7a05aed79ab3",
                "volume_size": 12,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d5ac07bf3a81c2f8",
            "tags": {
              "Name": "terra-redis-db"
            },
            "tags_all": {
              "Name": "terra-redis-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-099fc9b8dcc8c4ef8"
            ]
          },
          "dependencies": [
            "aws_security_group.inner_net",
            "aws_subnet.private_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630574434147:internet-gateway/igw-062194b5ebc23e00c",
            "id": "igw-062194b5ebc23e00c",
            "owner_id": "630574434147",
            "tags": {
              "Name": "terra-ig"
            },
            "tags_all": {
              "Name": "terra-ig"
            },
            "vpc_id": "vpc-0823b288d4fde9a50"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prod-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05483d007d5950265",
            "association_id": "eipassoc-0c3c3f4f69278c11d",
            "connectivity_type": "public",
            "id": "nat-09d53e4a0463ca3c2",
            "network_interface_id": "eni-0b058c9e25fa34094",
            "private_ip": "10.0.1.107",
            "public_ip": "16.16.242.64",
            "subnet_id": "subnet-0d5ac07bf3a81c2f8",
            "tags": {
              "Name": "Terra NAT"
            },
            "tags_all": {
              "Name": "Terra NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway",
            "aws_subnet.private_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-private-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630574434147:route-table/rtb-0596054acf0ed2a8e",
            "id": "rtb-0596054acf0ed2a8e",
            "owner_id": "630574434147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062194b5ebc23e00c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-private-routes"
            },
            "tags_all": {
              "Name": "terra-private-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0823b288d4fde9a50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630574434147:route-table/rtb-00be4b43376924813",
            "id": "rtb-00be4b43376924813",
            "owner_id": "630574434147",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-062194b5ebc23e00c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terra-public-routes"
            },
            "tags_all": {
              "Name": "terra-public-routes"
            },
            "timeouts": null,
            "vpc_id": "vpc-0823b288d4fde9a50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04932b8eafe4a6ec4",
            "route_table_id": "rtb-0596054acf0ed2a8e",
            "subnet_id": "subnet-0d5ac07bf3a81c2f8"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-private-routes",
            "aws_subnet.private_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03977192efbadef93",
            "route_table_id": "rtb-00be4b43376924813",
            "subnet_id": "subnet-0404d2907336e4129"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-public-routes",
            "aws_subnet.public_subnet",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inner_net",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630574434147:security-group/sg-099fc9b8dcc8c4ef8",
            "description": "only_inner_trafik",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099fc9b8dcc8c4ef8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "only_inner_trafik",
            "name_prefix": "",
            "owner_id": "630574434147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-inner-sg"
            },
            "tags_all": {
              "Name": "terra-inner-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0823b288d4fde9a50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "open_to_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630574434147:security-group/sg-043773d017d98498d",
            "description": "Allow all TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043773d017d98498d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "630574434147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-outer-sg"
            },
            "tags_all": {
              "Name": "terra-outer-sg"
            },
            "timeouts": {
              "create": null,
              "delete": "2m"
            },
            "vpc_id": "vpc-0823b288d4fde9a50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terra_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630574434147:subnet/subnet-0d5ac07bf3a81c2f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5ac07bf3a81c2f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630574434147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-private-subnet"
            },
            "tags_all": {
              "Name": "terra-private-subnet"
            },
            "vpc_id": "vpc-0823b288d4fde9a50"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630574434147:subnet/subnet-0404d2907336e4129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0404d2907336e4129",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "630574434147",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terra-public_subnet"
            },
            "tags_all": {
              "Name": "terra-public_subnet"
            },
            "vpc_id": "vpc-0823b288d4fde9a50"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:630574434147:vpc/vpc-0823b288d4fde9a50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f3e37b3fc2d4cf5b",
            "default_route_table_id": "rtb-02c98813cbf9b5d74",
            "default_security_group_id": "sg-0ce3cc430c12d9493",
            "dhcp_options_id": "dopt-0e9dc24ed29565653",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0823b288d4fde9a50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c98813cbf9b5d74",
            "owner_id": "630574434147",
            "tags": {
              "Name": "terra_vpc"
            },
            "tags_all": {
              "Name": "terra_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}